--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
         </div>
       </div>
       <div class="header-bottom">
+       
         <!-- search box -->
         <form action="" class="form-search-header">
-           <label class="label-search" for="search">search</label>
+           <!-- <label class="label-search" for="search">search</label>
          <input id="search" type="search" pattern=".*\s.*" required>
-          <span class="caret"></span>
+          <span class="caret"></span> -->
+          <input type="text" name="search" class="input-search-header" placeholder="Search..">
         </form>
         <!-- <form class="form-search form-search-header">
   <label class="label-search" for="search">search</label>
@@ -86,7 +88,9 @@
             </li>
           </ul>
         </div>
+         <button class="menuBtn hide"><i class='bx bx-menu'></i></button>
       </div>
+      
     </header>
     <!-- content -->
     <div id="content" style="margin-bottom: 100px;"></div>
@@ -95,7 +99,7 @@
         <div class="introduce"></div>
         <div class="thumbnail-list">
           <div class="wrapper"></div>
-        </div>z
+        </div>
       </div>
 
       <div class="navigation">
@@ -251,7 +255,7 @@
     </div>
 
     <div class="banner-container">
-      <div class="banner-item"  style="width: 158px;display: block">
+      <div class="banner-item"  style="width: 95px;display: block">
         <h2 class="banner-title">shop plant</h2>
         <p class="banner-description">Discover the best air purifying plant</p>
       </div>
