--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- navigation -->
         <nav>
           <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="/src/index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Home</a></li>
             <li class="nav-item"><a class="nav-link"  href="/src/views/product.html">Product</a></li>
             <li class="nav-item"><a class="nav-link" href="/src/views/about.html">about</a></li>
             <li class="nav-item"><a class="nav-link" href="/src/views/contact.html">Contact</a></li>
@@ -95,6 +95,7 @@
     </header>
     <!-- content -->
     <div id="content" style="margin-bottom: 100px;"></div>
+    <div id="body">
      <div class="slider-container">
       <div class="content">
         <div class="introduce"></div>
@@ -256,7 +257,7 @@
     </div>
 
     <div class="banner-container">
-      <div class="banner-item"  style="width: 195px;display: block">
+      <div class="banner-item"  style="display: block">
         <h2 class="banner-title">shop plant</h2>
         <p class="banner-description">Discover the best air purifying plant</p>
       </div>
@@ -286,6 +287,7 @@
           <p>show now</p>
         </div>
       </div>
+    </div>
     </div>
     <div class="banner-bottom">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
