--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
   </head>
   <body>
   <!-- header -->
@@ -52,7 +53,7 @@
            <!-- <label class="label-search" for="search">search</label>
          <input id="search" type="search" pattern=".*\s.*" required>
           <span class="caret"></span> -->
-          <input type="search" name="search" class="input-search-header" placeholder="Search.."><i class='bx bx-search-alt-2'></i>
+          <input type="search" name="search" class="input-search-header" placeholder="Search.." autocomplete="off"><i class='bx bx-search-alt-2'></i>
           <!-- <button class="search-btn"><i class='bx bx-search-alt-2'></i></button> -->
         </form>
         <!-- <form class="form-search form-search-header">
@@ -71,7 +72,7 @@
         <div class="header-action">
           <ul class="header-action-list">
             <li class="header-action-item">
-              <a href=""
+              <a href="./views/shipping_page.html" class="nav-link"
                 ><i class="bx bx-cart"></i
                 ><span class="header-action-title">cart</span></a
               >
@@ -119,37 +120,37 @@
         <div class="signature-plant-wrapper-list">
           <div class="signature-plant-item">
             <div class="signature-plant-img">
-              <img src="./assets/img/tree-2.jpg" alt="" />
+              <img src="./assets/img/felix.png" alt="" />
             </div>
             <div class="signature-plant-content">
-              <h4 class="signature-plant-title">name mjkd</h4>
-              <p class="signature-plant-description">asfdgsdfgsdfgsdfggdf</p>
+              <h4 class="signature-plant-title">aaaaaaaaaaaaaaaa</h4>
+              <p class="signature-plant-description">aaamhjgamjagmjga</p>
             </div>
           </div>
           <div class="signature-plant-item">
            <div class="signature-plant-img">
-              <img src="./assets/img/tree-2.jpg" alt="" />
+              <img src="./assets/img/felix_3.png" alt="" />
             </div>
             <div class="signature-plant-content">
-              <h4 class="signature-plant-title">sdfgdfg</h4>
-              <p class="signature-plant-description">sdfgsdfgsdfgsdfgdfsg</p>
+              <h4 class="signature-plant-title">aaaaaa</h4>
+              <p class="signature-plant-description">aaaaaaaaaaa</p>
             </div>
           </div>
           <div class="signature-plant-item">
             <div class="signature-plant-img">
-              <img src="./assets/img/tree-2.jpg" alt="" />
+              <img src="./assets/img/iew1pihua9k1h6yxrulh.png" alt="" />
             </div>
             <div class="signature-plant-content">
-              <h4 class="signature-plant-title">dfgdsfg</h4>
-              <p class="signature-plant-description">gdfgdsfgdsfgsdfgsdfg</p>
+              <h4 class="signature-plant-title">aaaaaaa</h4>
+              <p class="signature-plant-description">aaaaaaaa</p>
             </div>
           </div>
           <div class="signature-plant-item">
             <div class="signature-plant-img">
-              <img src="./assets/img/tree-2.jpg" alt="" />
+              <img src="./assets/img/ii4trbcmxeufldr9rj7f.png" alt="" />
             </div>
             <div class="signature-plant-content">
-              <h4 class="signature-plant-title">fdgsfgsdf</h4>
+              <h4 class="signature-plant-title"></h4>
               <p class="signature-plant-description">sdfgsdfgsdfgsdfgsdfg</p>
             </div>
           </div>
